# numan_plus

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: AdjustSplit.py  RunModel.py  SVMdataset.py  faceChicks_wide.csv  ttry.ipynb
src/easy_SVM/: __init__.py
src/numan_plus/: compute_anova.py
tests/: test_dataset.xlsx
