[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy_SVM"
version = "0.0.1"
authors = [
  { name="Mirko Zanon", email="mirkozanon91@gmail.com" },
]
description = "A package for userfriendly implementation of SVM"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MirkoZanon/easy_SVM"
"Bug Tracker" = "https://github.com/MirkoZanon/easy_SVM/issues"